Be/src/main/java/com/example/ManagerApp/app/rest/error/BadRequestAlertException.java
package com.example.ManagerApp.app.rest.error;

public class BadRequestAlertException extends RuntimeException {
    public BadRequestAlertException(String message) {
        super(message);
    }
}
